--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
             - v1-dependencies-{{ checksum "package.json" }}
             # fallback to using the latest cache if no exact match is found
             - v1-dependencies-
-
+      - run: setup_remote_docker
       - run: docker build -t jonathansilverste/docker-react -f Dockerfile.dev .
 
       - save_cache:
