--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - docker build -t jonathansilverste/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true jonathansilverstein/docker-react npm run test
+  - docker run jonathansilverstein/docker-react npm run test -- --coverage
 
 deploy:
   edge: true
