--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t jonathansilverste/docker-react -f Dockerfile.dev .
+  - docker build -t jonathansilverstein/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run jonathansilverstein/docker-react npm run test -- --coverage
+  - docker run -e CI=true jonathansilverstein/docker-react npm run test
 
 deploy:
   edge: true
